@@ -5415,6 +5415,8 @@ Version 1.6.19 [November 12, 2015]
   Cleaned up coding style in png_handle_PLTE().
 
 Version 1.6.20beta01 [(PENDING RELEASE)]
+  Avoid potential pointer overflow in png_handle_sPLT() and
+    png_handle_pCAL() (Bug report by John Regehr).
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
